@@ -1,0 +1,10 @@
+<header>Only create servers with selected features?</header>
+
+When this option is set to <b>No</b> (the default), when a domain is restored
+that does not yet exist on the system, Virtualmin will create it with all the
+features that were in the original virtual server. If you want to disable some
+features when restoring, you can instead select <b>Yes</b> and de-select them in
+the <b>Features and Settings</b> section. <p>
+
+<footer>
+
