@@ -715,3 +715,4 @@ Added links from the CPU load, memory used, disk used and other information on t
 In the Quota commands section of the Module Config page, added two new commands to get the quotas for a single user and group respectively. If defined, Virtualmin will use these when listing users in a domain or editing a single user, on the assumption that they are faster than the command which outputs quotas for all users.
 Creation of domains that match certain regular expressions can be denied using a new Module Config option in the Defaults for new domains section.
 Added the --only-features parameter to restore-domain.pl, which tells Virtualmin to only enable features selected for restore when creating a new domain as part of the process.
+Added a similar option to the restore form in the Virtualmin web interface.
